[workspace]
members = [
  "lib/*",
]

[workspace.package]
authors = [
  "Daniel Olano <daniel@olanod.com>",
  "Johan Alexis Duque Cadena <johan.duque@gmail.com>",
  "Pablo Dorado <hola@pablodorado.com>",
]
license = "GPL-3.0-or-later"

[package]
description = "Virto Async Light Open Runtime"
edition = "2021"
name = "valor"
repository = "https://github.com/virto-network/valor"
version = "0.6.0"

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
embassy-executor = {version = "0.1.0", features = ["log", "std", "nightly", "integrated-timers"]}
embassy-time = {version = "0.1.0", features = ["log", "std", "nightly"]}
embedded-io = {version = "0.4.0", features = ["async", "std"]}
env_logger = "0.10.0"
log = "0.4.17"

valor-core = {path = "./lib/core"}
valor-proc = {path = "./lib/proc"}
valor-runtime = {path = "./lib/runtime"}

[features]

# ToDo: Talk about this with @Dani
# [profile.release.package.valor_web]
# opt-level = "s"

[profile.release]
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
