[workspace]
members = [
  "bin/*",
  "lib/*",
]

[workspace.package]
authors = [
  "Daniel Olano <daniel@olanod.com>",
  "Johan Alexis Duque Cadena <johan.duque@gmail.com>",
  "Pablo Dorado <hola@pablodorado.com>",
]
license = "GPL-3.0-or-later"

[package]
description = "Virto Async Light Open Runtime"
edition = "2021"
name = "valor"
repository = "https://github.com/virto-network/valor"
version = "0.6.0"

[dependencies]
valor-core = {path = "./lib/core"}
valor-proc = {path = "./lib/proc"}

lazy_static = "1.4.0"

# ToDo: Talk about this with @Dani
# [profile.release.package.valor_web]
# opt-level = "s"

[profile.release]
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
