[package]
edition = "2021"
name = "valor_core"
version = "0.7.0"
license = "GPL-3.0-or-later"
description = "Virto Async Light Open Runtime"
authors = ["Daniel Olano <daniel@olanod.com>", "Johan Alexis Duque Cadena <johan.duque@gmail.com>"]
repository = "https://github.com/valibre-org/valor"

[features]
default = ["nightly", "embedded"]
embedded = ["embedded-alloc"]
nightly = ["embassy-executor/nightly", "embassy-nrf/nightly", "embassy-nrf/unstable-traits", "embassy-time/nightly", "embassy-time/unstable-traits", "embassy-usb", "embedded-io/async", "embassy-net"]

[dependencies]
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"]  }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"], optional = true }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "msos-descriptor",], optional = true }
embedded-io = { version = "0.4.0"}
embassy-lora = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["time", "defmt"], optional = true }
lora-phy = { version = "1", optional = true }
lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"], optional = true }
lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"], optional = true }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "1.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"
usbd-hid = "0.6.0"
serde = { version = "1.0.136", default-features = false }
heapless = "0.7.16"

libwallet = { path="../libwallet", default-features = false, features= [ "substrate", "vault_simple", "rand", "mnemonic"] }
rand_core = "0.6.4"
embedded-alloc = { version = "0.5.0", default-features = false, optional = true }

# clap = { version = "4.1.8", features = ["derive"] }
# env_logger = "0.10.0"
# log = "0.4.17"
# wasm_runtime = { path = "./wasm", features=["embedded"], default-features = false }

# [workspace]
# members = [
# 	"wasm",
# ]

# ToDo: Talk about this with @Dani
# [profile.release.package.valor_web]
# opt-level = "s"

[profile.release]
lto = true
strip = true
opt-level = "s"

[profile.dev]
opt-level = 0

[build-dependencies]
bindgen = "0.66.0"
cc = "1.0.79"
