[package]
name = "valor-native"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
async-trait = "0.1.41"
femme = "2.1.1"
kv-log-macro = "1.0.7"
tide = { version = "0.14.0", default-features = false, features = ["h1-server"] }
uuid = { version = "0.8.1", features = ["v4"] }
valor = { path = "..", package = "valor-rs" }

[[bin]]
name = "valor"
path = "src/main.rs"
