[package]
name = "valor-native"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
femme = "2.1.1"
kv-log-macro = "1.0.7"
libloading = "0.6.5"
tide = "0.15.0"
uuid = { version = "0.8.1", features = ["v4"] }
valor = { path = "..", package = "valor-rs", features = ["native"] }

[[bin]]
name = "valor"
path = "src/main.rs"
