[package]
name = "valor-native"
authors = ["Daniel Olano <daniel@olanod.com>"]
description = "Valor native runtime to run on the server side"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/valibre-org/valor"
version = "0.3.4"

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
async-trait = "0.1.42"
femme = "2.1.1"
kv-log-macro = "1.0.7"
libloading = "0.6.5"
tide = "0.15.0"
uuid = { version = "0.8.1", features = ["v4"] }
valor = { version = "0.3.4", path = "..", package = "valor-lib", features = ["native"] }

[[bin]]
name = "valor"
path = "src/main.rs"
