[package]
name = "valor-web"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.6.5", default-features = false, features = ["std"] }
valor = { path = ".." }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
wee_alloc = { version = "0.4.5", optional = true }
