[package]
name = "valor-web"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.6.5", default-features = false, features = ["std"] }
console_log = { version = "0.2.0", optional = true }
log = "0.4.11"
path-tree = "0.1.12"
valor = { path = ".." }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
wee_alloc = "0.4.5"
