[package]
name = "valor-web"
version = "0.3.4"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = { version = "0.2.0", optional = true }
log = "0.4.11"
valor = { path = "..", package = "valor-lib", features = ["web"] }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
wee_alloc = "0.4.5"
js-sys = "0.3.45"
thiserror = "1.0.21"
async-trait = "0.1.42"

[dependencies.web-sys]
version = "0.3.45"
features = [
	"BroadcastChannel",
	"Navigator",
	"ServiceWorkerContainer",
	"Window",
]
