[package]
name = "valor_bin"
authors = ["Daniel Olano <daniel@olanod.com>"]
description = "Valor native runtime to run on the server side"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/valibre-org/valor"
version = "0.4.7-beta.0"

[dependencies]
async-h1 = "2.1.4"
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
async-trait = "0.1.42"
femme = "2.1.1"
kv-log-macro = "1.0.7"
libloading = "0.6.5"
serde_json = "1.0.61"
structopt = "0.3.21"
uuid = { version = "0.8.1", features = ["v4"] }
valor = { version = "0.4.7-beta.0", path = "..", package = "valor_core", features = ["native"] }
serde = { version = "1.0.124", default-features = false, features = ["alloc", "derive"] }

