[package]
name = "valor_bin"
authors = ["Daniel Olano <daniel@olanod.com>"]
description = "Valor native runtime to run on the server side"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/valibre-org/valor"
version = "0.5.2-beta.0"
resolver = "2"

[dependencies]
# async-h1 = "2.3.2"
# async-std = { version = "1.10.0", features = ["attributes"] }
# async-trait = "0.1.50"
# femme = { git = "https://github.com/lrlna/femme.git" }
# kv-log-macro = "1.0.7"
# libloading = "0.7.0"
# serde_json = "1.0.64"
# structopt = "0.3.21"
# uuid = { version = "0.8.2", features = ["v4"] }
# valor = { version = "0.5.2-beta.0", path = "..", package = "valor_core", features = ["native"] }
# serde = { version = "1.0.125", default-features = false, features = ["alloc", "derive"] }

deno_core = "0.117.0"
deno_console = "0.35.0"
deno_fetch = "0.58.0"
deno_timers = "0.33.0"
deno_url = "0.35.0"
deno_web = "0.66.0"
deno_webidl = "0.35.0"
tokio = { version = "1.16.1", features = ["macros"] }

[[bin]]
name = "deno"
path = "src/deno.rs"
