[package]
name = "valor_plugin"
authors = ["Daniel Olano <daniel@olanod.com>"]
description = "proc-macro to conveniently declare valor plugins"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/valibre-org/valor"
version = "0.4.0-alpha.2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.48", features = ["full", "parsing"] }
