[package]
name = "valor_plugin"
authors = ["Daniel Olano <daniel@olanod.com>"]
description = "proc-macro to conveniently declare valor plugins"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/valibre-org/valor"
version = "0.5.1-beta.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "1.0.71", features = ["full", "parsing"] }
