[package]
name = "valor_web"
version = "0.4.0-alpha.1"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.42"
console_log = { version = "0.2.0", optional = true }
js-sys = "0.3.45"
log = "0.4.11"
thiserror = "1.0.21"
valor = { path = "..", package = "valor_lib", features = ["web"] }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"

[dependencies.web-sys]
version = "0.3.45"
features = [
	"BroadcastChannel",
	"Navigator",
	"ServiceWorkerContainer",
	"Window",
]
