[package]
name = "valor_web"
version = "0.4.3-alpha.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.50"
console_log = { version = "0.2.0", optional = true }
js-sys = "0.3.50"
log = "0.4.14"
thiserror = "1.0.24"
valor = { path = "..", package = "valor_core", features = ["web"] }
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"

[dependencies.web-sys]
version = "0.3.50"
features = [
	"BroadcastChannel",
	"Navigator",
	"ServiceWorkerContainer",
	"Window",
]
