[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasm3"]
native = ["wasmtime", "wasmtime-wasi", "once_cell"]

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
wasmtime = { version = "2.0.0", optional = true }
wasmtime-wasi = { version = "2.0.0", optional = true }
wasm3 = { git = "https://github.com/wasm3/wasm3-rs.git", optional = true }
once_cell = { version = "1.15.0", optional = true }
