[package]
name = "with_state"
version = "0.4.0-alpha.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"
publish = false

[dependencies]
valor = { path = "../..", package = "valor_core", features = ["util", "serde"] }

[build-dependencies]
vlugin = { path = "../../valor_plugin_build", package = "valor_plugin_build" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { path = "../..", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
