[package]
edition = "2021"
name = "valor-core"
version = "0.7.0"

[dependencies]
serde = {version = "1.0.163", optional = true}
serde_json = {version = "1.0.96", optional = true, default-features = false}

[features]
debug = []
default = ["std", "serialization"]
serde = ["dep:serde", "serde/alloc", "serde/derive"]
serde_json = ["dep:serde_json", "serde_json/alloc"]
serialization = ["serde", "serde_json"]
std = ["serde_json/std"]
